2006-01-18  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ModuleReference.cs
	  Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil/IMetadataScope.cs:
		Make IMetadataScope implement IMetadataTokenProvider.
	* Mono.Cecil/ReflectionWriter.cs:
		Fix a typo when saving nested type refs.

2006-01-17  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ArrayType.cs
	  Mono.Cecil/ArrayDimension.cs
	  Mono.Cecil/ReflectionWriter.cs:
		End arrays support.

2006-01-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/GenericContext.cs:
		Work on generics.

2005-12-31  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionHelper.cs:
		Fix import of type specs.

2005-12-30  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Add support to assemblies where the metadata is defined
		outside of the text section. (c++/cli /safe for instance)

2005-12-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfo.cs:
		Version 0.2.2.2 devel.

	* Mono.Cecil/AssemblyInfo.cs:
		Version 0.2 to be released.

	* Mono.Cecil/ReflectionWriter.cs:
		IGenericInstance are typespecs as well.

	* Mono.Cecil/ArrayType.cs:
		Add a single dimension in the default ctor.
	* Mono.Cecil/ReflectionReader.cs:
		Don't manually add the default dimension as it's done
		int the array type ctor.
	* Mono.Cecil/ReflectionHelper.cs:
		Import type specs.

2005-12-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter:
		Write pinvoke infos as well.

	* Mono.Cecil/ReflectionReader.cs:
		Unsure that primitive value types are viewed as
		value types.

	* CodeGen/templates/Section.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/Section.cs
	  Mono.Cecil.Binary/ImageReader.cs: