@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Mon Nov 28 18:29:34 CET 2005
+// Wed Jan 18 18:19:02 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -64,7 +64,7 @@ namespace Mono.Cecil.Binary {
 
 		public uint GetSize ()
 		{
-			return 0x34 + (uint) FileName.Length;
+			return 0x34 + (uint) FileName.Length + 1;
 		}
 
 		public void Accept (IBinaryVisitor visitor)
